--- a/k8s/infosquito2.yml
+++ b/k8s/infosquito2.yml
@@ -39,6 +39,17 @@ spec:
           limits:
             cpu: "1028m"
             memory: "512Mi"
+        env:
+          - name: OTEL_TRACES_EXPORTER
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_TRACES_EXPORTER
+          - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_EXPORTER_JAEGER_HTTP_ENDPOINT
         args:
           - --mode
           - periodic
