--- a/k8s/infosquito2.yml
+++ b/k8s/infosquito2.yml
@@ -36,9 +36,11 @@ spec:
           requests:
             cpu: "1028m"
             memory: "128Mi"
+            ephemeral-storage: "1Gi"
           limits:
             cpu: "1028m"
             memory: "512Mi"
+            ephemeral-storage: "1Gi"
         env:
           - name: OTEL_TRACES_EXPORTER
             valueFrom:
